# auvrl

./: .gitignore  MJLAB_AUV_CONFIG_SCHEMA.md  MJLAB_THRUSTER_CONFIG_SCHEMA.md  POSITION_TRACKING_TASK_PLAN.md  README.md  STATUS.md  THRUSTER_CALIBRATION.md  pyproject.toml
logs/: stabilize_eval.json  stabilize_eval_v2.json  stabilize_eval_v3.json
logs/rsl_rl/taluy_barrel_roll/2026-03-18_04-13-17_barrel_roll_stage1_stabilize/: events.out.tfevents.1773796401.pop-os.8388.0
logs/rsl_rl/taluy_barrel_roll/2026-03-18_04-43-48_barrel_roll_stage1_stabilize_v2/: events.out.tfevents.1773798230.pop-os.29551.0
logs/rsl_rl/taluy_barrel_roll/2026-03-18_23-26-32_barrel_roll_stage1_stabilize_v3_sanity/: events.out.tfevents.1773865597.pop-os.5797.0
logs/rsl_rl/taluy_barrel_roll/2026-03-18_23-30-10_barrel_roll_stage1_stabilize_v3/: events.out.tfevents.1773865811.pop-os.9376.0
logs/rsl_rl/taluy_position_6d/2026-03-24_20-07-15_validation/: events.out.tfevents.1774372036.tbw-HKD-WXX.305441.0
logs/rsl_rl/taluy_position_6d/2026-03-26_14-52-14_first_position_baseline/: events.out.tfevents.1774525939.pop-os.7451.0
src/auvrl/: __init__.py
src/auvrl/actuator/: __init__.py  body_wrench_action.py  thruster_actuator.py  thruster_allocation.py
src/auvrl/config/: __init__.py  auv_cfg.py  thruster_cfg.py
src/auvrl/envs/: __init__.py  events.py  taluy_env_cfg.py
src/auvrl/scripts/: __init__.py
src/auvrl/sim/: __init__.py  hydrodynamics.py  underwater_hydro_action.py
src/auvrl/tasks/: __init__.py
src/auvrl/utils/: __init__.py  observation.py  type_aliases.py
(+152 files in other folders)
